# cmt

./: .cmt.example.json  .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cmt  install.ps1  install.sh  package.json  release-please-config.json
.github/workflows/: ci.yml  homebrew.yml  publish.yml  release-please.yml  release.yml  test.yml  update-homebrew-formula.yml
Formula/: cmt.rb
HomebrewFormula/: cmt.rb
docs/superpowers/plans/: 2026-06-20-cmt-v2-rust-rewrite.md
docs/superpowers/specs/: 2026-06-20-cmt-v2-rust-rewrite-design.md
npm/: postinstall.js
schema/: cmt.schema.json
scripts/: capture_fixtures.sh
src/: commit.rs  config.rs  git.rs  hooks.rs  lib.rs  lint.rs  main.rs  types.rs  ui.rs
src/commands/: amend.rs  completions.rs  help.rs  init.rs  log.rs  mod.rs  status.rs  types_cmd.rs  uninstall.rs
src/picker/: mod.rs  state.rs
test/: helpers.sh  run_tests.sh  test_assemble.sh  test_config.sh  test_lint.sh
tests/: cli_smoke.rs  init_uninstall.rs  parity_assemble.rs  parity_config.rs  parity_hooks.rs  parity_lint.rs
tests/fixtures/assemble/: body.in  body.out  breaking.in  breaking.out  footer.in  footer.out  scoped.in  scoped.out  simple.in
tests/fixtures/config/: custom.json  custom.resolved  empty.resolved
tests/fixtures/hooks/: commitmsg_fresh.after  commitmsg_fresh.op  prepare_fresh.after  prepare_fresh.op
tests/fixtures/lint/: bad_format.msg  bad_format.out  body_no_blank.msg  body_no_blank.out  breaking_marker.msg  breaking_marker.out  empty_desc.out  long_header.msg  (+11 more)
